.provarCaches/00D410000011HE0EAM/objects/rstk__poasn__c.object
<CustomObject>
    <description>poasn__c; BOC</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__poasn_div__r.rstk__sydiv_div__c &amp; &quot;_&quot; &amp; TEXT(rstk__poasn_asnno__c)</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>TEXT( rstk__poasn_asnno__c )</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poasn_alllines__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checkbox indicator that all lines will use a single entry of required documents, rather than attaching documents to each individual requisition.</inlineHelpText>
        <label>One Set of Docs for All Requisitions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__poasn_allreceived__c</fullName>
        <formula>IF( rstk__poasn_numreqs__c &gt; 0 &amp;&amp;  rstk__poasn_numreqs__c =  rstk__poasn_numreqsrcvd__c , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>All Requisitions Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__poasn_arrivedconsol__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If routed through a consolidation center, this checkbox indicates that the item was received there.</inlineHelpText>
        <label>Arrived at Consolidation Center</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__poasn_asnno__c</fullName>
        <inlineHelpText>Numeric identifier for this Advanced Shipment Notification. Automatically set by system, but can be overwritten.  Must be entirely numeric with no decimals.</inlineHelpText>
        <label>ASN Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__poasn_carrier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Valid carrier from the carrier table to be used for this shipment.</inlineHelpText>
        <label>Carrier</label>
        <referenceTo>rstk__sycarrier__c</referenceTo>
        <relationshipLabel>Advance Shipment Notifications</relationshipLabel>
        <relationshipName>Advance_Shipment_Notifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poasn_conctrdate__c</fullName>
        <inlineHelpText>Estimated arrival date at the Consolidation Center, which must be a date later than the Pickup Date.  Calculated  from consolidation center lead time on Supplier Address record.</inlineHelpText>
        <label>ETA at Consolidation Center</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__poasn_departedforcon__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checkbox indicating this ASN has been picked up at the Supplier site and is heading to the Consolidation Center.  Only valid if router directs this ASN to a Consolidation Center.</inlineHelpText>
        <label>Departed for Consolidation Center</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__poasn_dgnrequired__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>DGN Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__poasn_div__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Test</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>Advance Shipment Notifications</relationshipLabel>
        <relationshipName>poasns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poasn_facility__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Supplier Facility</label>
        <referenceTo>rstk__povendpoaddr__c</referenceTo>
        <relationshipLabel>Advance Shipment Notifications</relationshipLabel>
        <relationshipName>poasns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poasn_haveci__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Commercial Invoice Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__poasn_havedgn__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>DGN Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__poasn_havepack__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Packing List Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__poasn_haveswb__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SWB Attached by TMM Freight</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__poasn_lotwarning__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shelf Life Warning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__poasn_numreqs__c</fullName>
        <label>Number of Requisitions</label>
        <summaryForeignKey>rstk__poasnreq__c.rstk__poasnreq_poasn__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstk__poasn_numreqsrcvd__c</fullName>
        <label>Number of Received Requisitions</label>
        <summaryFilterItems>
            <field>rstk__poasnreq__c.rstk__poasnreq_received__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>rstk__poasnreq__c.rstk__poasnreq_poasn__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstk__poasn_pickupdate__c</fullName>
        <inlineHelpText>Date this ASN is scheduled to be picked up for delivery from the Supplier.</inlineHelpText>
        <label>Pickup Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__poasn_poconctr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If this ASN is routed to a Consolidation Center, this field will be enabled and will require the entry of a valid consolidation center from the Consolidation Center table. Otherwise, this field is not used.</inlineHelpText>
        <label>Consolidation Center</label>
        <referenceTo>rstk__poconctr__c</referenceTo>
        <relationshipLabel>Advance Shipment Notifications</relationshipLabel>
        <relationshipName>poasns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poasn_poship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Inbound Shipment</label>
        <referenceTo>rstk__poship__c</referenceTo>
        <relationshipLabel>Advance Shipment Notifications</relationshipLabel>
        <relationshipName>poasns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poasn_povend__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Supplier for this ASN.</inlineHelpText>
        <label>Vendor</label>
        <referenceTo>rstk__povend__c</referenceTo>
        <relationshipLabel>Advance Shipment Notifications</relationshipLabel>
        <relationshipName>poasns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poasn_rejectreason__c</fullName>
        <inlineHelpText>Free-form field used to indicate cause for rejecting the ASN.  This allows the Supplier to correct the problem and resubmit the ASN for approval.</inlineHelpText>
        <label>Reason for Rejection</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstk__poasn_status__c</fullName>
        <inlineHelpText>ASN begins at status &apos;New&apos;, then progresses through &apos;Submitted&apos; and &apos;Approved and in Process&apos;.  At Submitted status, it may also be changed to &apos;Rejected&apos;.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Approved &amp; In Process</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__poasn_trackingno__c</fullName>
        <inlineHelpText>Manual entry.  Carrier&apos;s tracking number for this shipment.</inlineHelpText>
        <label>Tracking Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poasn_transittype__c</fullName>
        <inlineHelpText>Valid Transit Type selected from dropdown.  Defaults from inventory item master record, but may be changed until ASN is submitted.</inlineHelpText>
        <label>Transit Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>Consolidated</fullName>
                </value>
                <value>
                    <fullName>Expedite Direct</fullName>
                </value>
                <value>
                    <fullName>Expedite Consolidated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Advance Shipment Notification</label>
    <listViews>
        <fullName>rstk__Consolidated</fullName>
        <columns>NAME</columns>
        <columns>rstk__poasn_div__c</columns>
        <columns>rstk__poasn_asnno__c</columns>
        <columns>rstk__poasn_status__c</columns>
        <columns>rstk__poasn_poship__c</columns>
        <columns>rstk__poasn_conctrdate__c</columns>
        <columns>rstk__poasn_haveci__c</columns>
        <columns>rstk__poasn_havepack__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>rstk__poasn_transittype__c</columns>
        <columns>rstk__poasn_allreceived__c</columns>
        <columns>rstk__poasn_numreqsrcvd__c</columns>
        <columns>rstk__poasn_numreqs__c</columns>
        <filterScope>Everything</filterScope>
        <label>Consolidated</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__RS_Advance_Shipment_Notifications</fullName>
        <columns>NAME</columns>
        <columns>rstk__poasn_div__c</columns>
        <columns>rstk__poasn_asnno__c</columns>
        <columns>rstk__poasn_lotwarning__c</columns>
        <columns>rstk__poasn_status__c</columns>
        <columns>rstk__poasn_poship__c</columns>
        <columns>rstk__poasn_conctrdate__c</columns>
        <columns>rstk__poasn_haveci__c</columns>
        <columns>rstk__poasn_havedgn__c</columns>
        <columns>rstk__poasn_alllines__c</columns>
        <columns>rstk__poasn_havepack__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstk__poasn_transittype__c</columns>
        <columns>rstk__poasn_allreceived__c</columns>
        <filterScope>Everything</filterScope>
        <label>Advance Shipment Notifications</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Advance Shipment Notifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>rstk__ASN_Number</fullName>
        <active>true</active>
        <description>ASN Number is Required</description>
        <errorConditionFormula>ISBLANK(rstk__poasn_asnno__c)</errorConditionFormula>
        <errorMessage>ASN Number is Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__ASN_Number2</fullName>
        <active>true</active>
        <description>ASN Number is not Modifiable</description>
        <errorConditionFormula>!ISNEW() &amp;&amp; ISCHANGED(rstk__poasn_asnno__c)</errorConditionFormula>
        <errorMessage>ASN Number is not Modifiable</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Consolidation_Center</fullName>
        <active>true</active>
        <description>Consolidation Center is Required</description>
        <errorConditionFormula>ISBLANK(rstk__poasn_poconctr__c) &amp;&amp; (  ISPICKVAL(rstk__poasn_transittype__c, &apos;Consolidated&apos;) || ISPICKVAL(rstk__poasn_transittype__c, &apos;Expedite Consolidated&apos;)  )</errorConditionFormula>
        <errorMessage>Consolidation Center is Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Consolidation_Center2</fullName>
        <active>true</active>
        <description>Consolidation Center should belongs to Advance Shipment Notification Division.</description>
        <errorConditionFormula>!ISBLANK(rstk__poasn_poconctr__c) &amp;&amp; rstk__poasn_poconctr__r.rstk__poconctr_div__c != rstk__poasn_div__c</errorConditionFormula>
        <errorMessage>Consolidation Center should belongs to Advance Shipment Notification Division.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Departed_for_Consolidation_Center</fullName>
        <active>true</active>
        <description>Departed for Consolidation Center should be uncheck if Transit Type is Direct or Expedite Direct.</description>
        <errorConditionFormula>rstk__poasn_departedforcon__c  &amp;&amp; (TEXT(rstk__poasn_transittype__c) = &apos;Direct&apos; || TEXT(rstk__poasn_transittype__c) = &apos;Expedite Direct&apos; )</errorConditionFormula>
        <errorMessage>Departed for Consolidation Center should be uncheck if Transit Type is Direct or Expedite Direct.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Division</fullName>
        <active>true</active>
        <description>Division is not Modifiable</description>
        <errorConditionFormula>!ISNEW() &amp;&amp;  ISCHANGED(rstk__poasn_div__c)</errorConditionFormula>
        <errorMessage>Division is not Modifiable</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__ETA_at_Consolidation_Center</fullName>
        <active>true</active>
        <description>ETA at Consolidation Center (if provided) must be greater than Pickup Date.</description>
        <errorConditionFormula>NOT(ISBLANK(rstk__poasn_conctrdate__c)) &amp;&amp; rstk__poasn_conctrdate__c &lt; rstk__poasn_pickupdate__c</errorConditionFormula>
        <errorMessage>ETA at Consolidation Center (if provided) must be greater than Pickup Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Pickup_Date</fullName>
        <active>true</active>
        <description>Pickup Date is Required and must be greater or  equal to Today&apos;s date</description>
        <errorConditionFormula>ISNEW() &amp;&amp; (ISBLANK(rstk__poasn_pickupdate__c) || rstk__poasn_pickupdate__c &lt; TODAY())</errorConditionFormula>
        <errorMessage>Pickup Date is Required and must be greater or  equal to Today .</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Transit_Type</fullName>
        <active>true</active>
        <description>Transit Type is not Modifiable as Status is not New or Rejected</description>
        <errorConditionFormula>NOT(ISNEW()) &amp;&amp;  ISCHANGED(rstk__poasn_transittype__c) &amp;&amp;  TEXT(rstk__poasn_status__c ) != &apos;New&apos; &amp;&amp; TEXT(rstk__poasn_status__c ) != &apos;Rejected&apos;</errorConditionFormula>
        <errorMessage>Transit Type is not Modifiable as Status is not New or Rejected</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Vendor</fullName>
        <active>true</active>
        <description>Vendor is Required</description>
        <errorConditionFormula>ISBLANK(rstk__poasn_povend__c)</errorConditionFormula>
        <errorMessage>Vendor is Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Vendor2</fullName>
        <active>false</active>
        <description>Vendor is not Modifiable</description>
        <errorConditionFormula>!ISNEW() &amp;&amp; ISCHANGED(rstk__poasn_povend__c)</errorConditionFormula>
        <errorMessage>Vendor is not Modifiable</errorMessage>
    </validationRules>
</CustomObject>